fix navbar on mobile -750 px

--- a/src/app/bs-navbar/bs-navbar.component.css
+++ b/src/app/bs-navbar/bs-navbar.component.css
@@ -2,3 +2,15 @@
 .dropdown-toggle { 
   cursor: pointer;
 }
+
+@media (max-width: 750px) {
+  .nav-item .dropdown{
+    position:absolute;
+    right: 10px;
+  }
+  .navBarDefault{
+    position:absolute;
+    right: 10px;
+    top:20px;
+  }
+}
